-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
5.11
-
None
-
Android 6
-
4fa8dfee5dd31433d22fdb449c1783e256931c8f
This fails on the first check in the test
FAIL! : tst_QDateTime::timeZones() Compared values are not the same 06-08 12:58:19.468 31234 31254 I QTestLib: Actual (invalidTz.isValid()): 1 06-08 12:58:19.468 31234 31254 I QTestLib: Expected (false) : 0 06-08 12:58:19.468 31234 31254 I QTestLib: Loc: [D:\projects\qt\clean-5.11\src\qtbase\tests\auto\corelib\tools\qdatetime\tst_qdatetime.cpp(3193)]
QTimeZone invalidTz = QTimeZone("Vulcan/ShiKahr"); QCOMPARE(invalidTz.isValid(), false); // <- fails
- relates to
-
QTBUG-80173 QTimeZone::systemTimeZone return invalid timezone
-
- Closed
-
- resulted in
-
QTBUG-81975 Wrong return of the standardTimeOffset function under Android
-
- Closed
-
For Gerrit Dashboard: QTBUG-68842 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
232451,7 | Leave m_id clear if the JNI didn't give us a time-zone | 5.11 | qt/qtbase | Status: MERGED | -2 | 0 |